# underfoot-underground-travel-planner

./: .eslintignore  .gitignore  .npmrc  AGENTS.md  LICENSE  Makefile  README.md  commitlint.config.js  cspell.json  eslint.config.js  lefthook.yml  package-lock.json  package.json  underfoot.md
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: backend.instructions.md  code-reviews.instructions.md  common.instructions.md  docs.instructions.md  frontend.instructions.md  supabase.instructions.md
.github/workflows/: build-and-test.yml  cloudflare-pages.yml  codeql.yml  python-backend-deploy.yml  python-backend.yml  supabase-deploy.yml
backend/: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  README.md  conftest.py  manage.py  pyproject.toml  wrangler.toml
backend/chat/: api.py  apps.py  middleware.py  schemas.py
backend/chat/config/: constants.py  settings.py
backend/chat/services/: cache_service.py  embedding_service.py  eventbrite_service.py  geocoding_service.py  openai_service.py  reddit_service.py  scoring_service.py  search_service.py  serp_service.py  supabase_service.py
backend/chat/utils/: errors.py  input_sanitizer.py  input_validator.py  logger.py  metrics.py
backend/docs/: EMBEDDING_SERVICE.md
backend/scripts/: deploy.sh  setup.sh
backend/src/config/: settings.py
backend/src/middleware/: cors_middleware.py  security_middleware.py  tracing_middleware.py
backend/src/models/: domain_models.py  request_models.py  response_models.py
backend/src/services/: cache_service.py  embedding_service.py  eventbrite_service.py  geocoding_service.py  openai_service.py  reddit_service.py  scoring_service.py  search_service.py  serp_service.py  supabase_service.py
backend/src/utils/: input_validator.py  logger.py  metrics.py
backend/src/workers/: chat_worker.py
backend/tests/: conftest.py
backend/tests/integration/: test_supabase_service.py
backend/tests/unit/test_config/: test_settings.py
backend/tests/unit/test_models/: test_request_models.py  test_response_models.py
backend/tests/unit/test_services/: test_cache_service.py  test_embedding_service.py  test_openai_service.py  test_scoring_service.py  test_supabase_service.py
backend/tests/unit/test_utils/: test_errors.py  test_logger.py
backend/underfoot/: asgi.py  settings.py  urls.py  wsgi.py
docs/: AGENTS.md  README.md
docs/architecture/: ARCHITECTURE_DECISION.md  DATA_RETRIEVAL_ADR.md  FRONTEND_DESIGN_ADR.md  MERMAID_DIAGRAMS.md
docs/backend/: EMBEDDING_SERVICE.md  QUICKSTART.md
docs/planning/: BASELINE_STATUS.md  DEVELOPMENT_PLAN.md  FUTURE_ENHANCEMENTS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  JOURNEY.md  NATIVE_CHAT_VISION.md  ORCHESTRATION_PLAN.md  PROJECT_UPDATE_SUMMARY.md  PYTHON_BACKEND_MIGRATION_PLAN.md  PYTHON_MIGRATION_SUMMARY.md  RESEARCH_SPIKES.md  RESULTS_STRATEGY_V1.md  SETUP_COMPLETE.md  TTD_IMMEDIATE.md
docs/tech_guides/: CI_CD.md  CLOUDFLARE_DEPLOYMENT_STRATEGY.md  CLOUDFLARE_FLUTTER_DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  ENVIRONMENT_VARIABLES.md  INTEGRATION_PLAN.md  LOCAL_LOGGING.md  SUPABASE_CLEANUP_STRATEGY.md  SUPABASE_INTEGRATION_PLAN.md  TESTING.md  VECTOR_SEARCH_LEARNING.md
docs/user_guides/: CHAT_UI_README.md  MANUAL_SANITY_TEST.md
frontend/: .env.example  .env.test  .eslintrc.json  AGENTS.md  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  stonewalker-persona.md  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatArea.tsx  ChatInput.tsx  DebugPanel.tsx  GoogleMapView.tsx  Header.tsx  MapView.tsx  MessageBubble.tsx
frontend/src/data/: mockData.ts
frontend/src/hooks/: useKeyboardNavigation.ts  useTheme.ts
frontend/test/: setup.ts
mobile/: .gitignore  GOOGLE_MAPS_SETUP.md  README.md  SETUP_NOW.md  TESTING.md  pubspec.yaml  setup-android-test.sh
mobile/integration_test/: app_test.dart
mobile/test/: test_setup.dart  widget_test.dart
mobile/web/: index.html  manifest.json
scripts/: cleanup-old-backend.sh  fix-github-admonitions.js
supabase/: AGENTS.md  MIGRATION_NOTES.md  README.md  config.toml
supabase/functions/: deno.json  import-map.json
supabase/migrations/: 001_extensions_and_schemas.sql  001_initial_schema.sql  002_rls_policies.sql  002_roles_and_privileges.sql  003_cache_tables.sql  003_security_monitoring.sql  004_embeddings_table.sql  004_vector_search.sql  005_rls_policies.sql  005_vector_search_functions.sql  006_functions.sql  007_monitoring.sql  008_move_vector_extension.sql  008_move_vector_extension_safe.sql  20251101000001_places_embeddings.sql  README.md  VECTOR_MIGRATION.md
supabase/scripts/: deploy.sh
(+41 files in other folders)
