[tool.poetry]
name = "underfoot-backend-python"
version = "0.1.0"
description = "Underfoot Underground Travel Planner - Python Backend for Cloudflare Workers"
authors = ["AN Childress <contact@anchildress.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
httpx = "^0.26"
openai = "^1.3.7"
pydantic = "^2.5.2"
structlog = "^23.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
supabase = "^2.21"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.11.0"
postgrest = "^2.21.1"
bleach = "^6.2.0"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.37.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
ruff = "^0.1.7"
mypy = "^1.7.1"
black = "^23.11.0"
workers-py = "*"
types-bleach = "^6.3.0.20251029"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=30",
    "-v"
]

[tool.coverage.run]
omit = [
    "src/__init__.py",
    "src/*/__init__.py",
    "src/middleware/*",
    "src/workers/chat_worker.py"
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function call in argument defaults
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
